--- a/UI/info_dialog.ui
+++ b/UI/info_dialog.ui
@@ -16,9 +16,9 @@
   <widget class="QWidget" name="widget" native="true">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>40</x>
      <y>70</y>
-     <width>361</width>
+     <width>371</width>
      <height>151</height>
     </rect>
    </property>
@@ -31,18 +31,18 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>10</x>
       <y>30</y>
-      <width>331</width>
-      <height>41</height>
+      <width>351</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>幼圆</family>
-      <pointsize>12</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
+      <family>Microsoft YaHei</family>
+      <pointsize>14</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
      </font>
     </property>
     <property name="text">
@@ -55,18 +55,18 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>100</y>
+      <x>130</x>
+      <y>110</y>
       <width>111</width>
       <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>幼圆</family>
-      <pointsize>9</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
+      <family>Microsoft YaHei</family>
+      <pointsize>10</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
      </font>
     </property>
     <property name="text">
@@ -77,24 +77,24 @@
   <widget class="QWidget" name="widget_2" native="true">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>40</x>
      <y>30</y>
-     <width>361</width>
+     <width>371</width>
      <height>41</height>
     </rect>
    </property>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>160</x>
+      <x>170</x>
       <y>10</y>
-      <width>41</width>
+      <width>31</width>
       <height>20</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>Consolas</family>
+      <family>Microsoft YaHei</family>
       <pointsize>10</pointsize>
       <weight>75</weight>
       <bold>true</bold>
