--- a/UI/main_window.ui
+++ b/UI/main_window.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1477</width>
-    <height>915</height>
+    <width>1293</width>
+    <height>742</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MyCloud</string>
+   <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QWidget" name="widget" native="true">
@@ -52,36 +52,94 @@
     <widget class="QLabel" name="logo">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>-20</y>
-       <width>101</width>
-       <height>101</height>
+       <x>20</x>
+       <y>10</y>
+       <width>31</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="text">
       <string/>
      </property>
     </widget>
-    <widget class="QPushButton" name="user_btn">
+    <widget class="QLabel" name="id">
      <property name="geometry">
       <rect>
-       <x>970</x>
+       <x>70</x>
        <y>10</y>
-       <width>51</width>
+       <width>141</width>
        <height>31</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <family>Consolas</family>
-       <pointsize>11</pointsize>
+       <family>Microsoft YaHei</family>
+       <pointsize>10</pointsize>
       </font>
      </property>
-     <property name="contextMenuPolicy">
-      <enum>Qt::ActionsContextMenu</enum>
+     <property name="text">
+      <string>TextLabel</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="add_btn">
+     <property name="geometry">
+      <rect>
+       <x>990</x>
+       <y>10</y>
+       <width>91</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Microsoft YaHei</family>
+       <pointsize>10</pointsize>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
      </property>
      <property name="text">
-      <string/>
+      <string>Add Solve</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="title">
+     <property name="geometry">
+      <rect>
+       <x>530</x>
+       <y>10</y>
+       <width>171</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Microsoft YaHei</family>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Solve Reconstruction</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="edit_btn">
+     <property name="geometry">
+      <rect>
+       <x>890</x>
+       <y>10</y>
+       <width>91</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Microsoft YaHei</family>
+       <pointsize>10</pointsize>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Edit Algs</string>
      </property>
     </widget>
    </widget>
@@ -91,121 +149,17 @@
       <x>50</x>
       <y>70</y>
       <width>211</width>
-      <height>661</height>
+      <height>651</height>
      </rect>
     </property>
-    <widget class="QPushButton" name="allfile_btn">
+    <widget class="QListWidget" name="listWidget">
      <property name="geometry">
       <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>211</width>
-       <height>41</height>
+       <x>10</x>
+       <y>11</y>
+       <width>191</width>
+       <height>631</height>
       </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>幼圆</family>
-       <pointsize>9</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>全部文件</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="doc_btn">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>40</y>
-       <width>211</width>
-       <height>41</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>幼圆</family>
-       <pointsize>9</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>文档</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="img_btn">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>80</y>
-       <width>211</width>
-       <height>41</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>幼圆</family>
-       <pointsize>9</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>图片</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="music_btn">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>120</y>
-       <width>211</width>
-       <height>41</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>幼圆</family>
-       <pointsize>9</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>音乐</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="video_btn">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>160</y>
-       <width>211</width>
-       <height>41</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>幼圆</family>
-       <pointsize>9</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>视频</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="other_btn">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>200</y>
-       <width>211</width>
-       <height>41</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>幼圆</family>
-       <pointsize>9</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>其他</string>
      </property>
     </widget>
    </widget>
@@ -215,452 +169,43 @@
       <x>260</x>
       <y>70</y>
       <width>971</width>
-      <height>661</height>
+      <height>651</height>
      </rect>
     </property>
-    <widget class="QWidget" name="widget_4" native="true">
-     <property name="geometry">
-      <rect>
-       <x>20</x>
-       <y>10</y>
-       <width>931</width>
-       <height>51</height>
-      </rect>
-     </property>
-     <widget class="QPushButton" name="back_btn">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>10</y>
-        <width>31</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="forward_btn">
-      <property name="geometry">
-       <rect>
-        <x>50</x>
-        <y>10</y>
-        <width>31</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="refresh_btn">
-      <property name="geometry">
-       <rect>
-        <x>100</x>
-        <y>10</y>
-        <width>31</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="upload_btn">
-      <property name="geometry">
-       <rect>
-        <x>190</x>
-        <y>10</y>
-        <width>91</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>幼圆</family>
-        <pointsize>9</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>上传</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="mkdir_btn">
-      <property name="geometry">
-       <rect>
-        <x>290</x>
-        <y>10</y>
-        <width>141</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>幼圆</family>
-        <pointsize>9</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>新建文件夹</string>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="lineEdit">
-      <property name="geometry">
-       <rect>
-        <x>640</x>
-        <y>10</y>
-        <width>241</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="search_btn">
-      <property name="geometry">
-       <rect>
-        <x>890</x>
-        <y>10</y>
-        <width>31</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="transfer_btn">
-      <property name="geometry">
-       <rect>
-        <x>480</x>
-        <y>10</y>
-        <width>111</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>幼圆</family>
-        <pointsize>9</pointsize>
-        <weight>50</weight>
-        <bold>false</bold>
-       </font>
-      </property>
-      <property name="cursor">
-       <cursorShape>PointingHandCursor</cursorShape>
-      </property>
-      <property name="text">
-       <string>传输列表</string>
-      </property>
-     </widget>
-    </widget>
     <widget class="QStackedWidget" name="stackedWidget">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>70</y>
-       <width>931</width>
-       <height>581</height>
+       <x>10</x>
+       <y>10</y>
+       <width>951</width>
+       <height>631</height>
       </rect>
      </property>
      <property name="currentIndex">
-      <number>8</number>
+      <number>0</number>
      </property>
-     <widget class="QWidget" name="allfile_page">
-      <widget class="QTableWidget" name="allfile_table">
+     <widget class="QWidget" name="page">
+      <widget class="QTableWidget" name="tableWidget">
        <property name="geometry">
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>931</width>
-         <height>581</height>
+         <width>951</width>
+         <height>631</height>
         </rect>
        </property>
-       <column>
-        <property name="text">
-         <string>文件名</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>大小</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>修改时间</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>操作</string>
-        </property>
-       </column>
       </widget>
      </widget>
-     <widget class="QWidget" name="doc_page">
-      <widget class="QTableWidget" name="doc_table">
+     <widget class="QWidget" name="page_2">
+      <widget class="QTableWidget" name="tableWidget_2">
        <property name="geometry">
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>931</width>
-         <height>581</height>
+         <width>951</width>
+         <height>631</height>
         </rect>
        </property>
-       <column>
-        <property name="text">
-         <string>文件名</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>大小</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>修改时间</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>操作</string>
-        </property>
-       </column>
-      </widget>
-     </widget>
-     <widget class="QWidget" name="img_page">
-      <widget class="QTableWidget" name="img_table">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>0</y>
-         <width>931</width>
-         <height>581</height>
-        </rect>
-       </property>
-       <column>
-        <property name="text">
-         <string>文件名</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>大小</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>修改时间</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>操作</string>
-        </property>
-       </column>
-      </widget>
-     </widget>
-     <widget class="QWidget" name="music_page">
-      <widget class="QTableWidget" name="music_table">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>0</y>
-         <width>931</width>
-         <height>581</height>
-        </rect>
-       </property>
-       <column>
-        <property name="text">
-         <string>文件名</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>大小</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>修改时间</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>操作</string>
-        </property>
-       </column>
-      </widget>
-     </widget>
-     <widget class="QWidget" name="video_page">
-      <widget class="QTableWidget" name="video_table">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>0</y>
-         <width>931</width>
-         <height>581</height>
-        </rect>
-       </property>
-       <column>
-        <property name="text">
-         <string>文件名</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>大小</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>修改时间</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>操作</string>
-        </property>
-       </column>
-      </widget>
-     </widget>
-     <widget class="QWidget" name="other_page">
-      <widget class="QTableWidget" name="other_table">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>0</y>
-         <width>931</width>
-         <height>581</height>
-        </rect>
-       </property>
-       <column>
-        <property name="text">
-         <string>文件名</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>大小</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>修改时间</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>操作</string>
-        </property>
-       </column>
-      </widget>
-     </widget>
-     <widget class="QWidget" name="no_file_page">
-      <widget class="QLabel" name="label_3">
-       <property name="geometry">
-        <rect>
-         <x>390</x>
-         <y>190</y>
-         <width>141</width>
-         <height>121</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_6">
-       <property name="geometry">
-        <rect>
-         <x>340</x>
-         <y>340</y>
-         <width>241</width>
-         <height>51</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>11</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>当前没有文件哦，快来上传吧</string>
-       </property>
-      </widget>
-     </widget>
-     <widget class="QWidget" name="file_not_found_page">
-      <widget class="QLabel" name="label_4">
-       <property name="geometry">
-        <rect>
-         <x>400</x>
-         <y>190</y>
-         <width>121</width>
-         <height>121</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_7">
-       <property name="geometry">
-        <rect>
-         <x>340</x>
-         <y>340</y>
-         <width>241</width>
-         <height>51</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>11</pointsize>
-        </font>
-       </property>
-       <property name="layoutDirection">
-        <enum>Qt::LeftToRight</enum>
-       </property>
-       <property name="text">
-        <string>没有搜索到相关文件</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-      </widget>
-     </widget>
-     <widget class="QWidget" name="search_result_page">
-      <widget class="QTableWidget" name="search_table">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>0</y>
-         <width>931</width>
-         <height>581</height>
-        </rect>
-       </property>
-       <column>
-        <property name="text">
-         <string>文件名</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>大小</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>修改时间</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>操作</string>
-        </property>
-       </column>
       </widget>
      </widget>
     </widget>
